# mkdocs-section-index

./: README.md  mkdocs.yml  properdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy-docs.yml
.tools/: ci.sh  copier-answers.yml  release.sh  test.sh
docs/: requirements.txt
docs/assets/: script.js
example/: mkdocs.yml  properdocs.yml
example/docs/: index.md
example/docs/borgs/: bar.md  index.md
mkdocs_section_index/: __init__.py  plugin.py  rewrites.py
requirements/: requirements-docs.txt
tests/: conftest.py  test_integration.py  test_plugin.py  test_rewrites.py
tests/navs/: basic.yml
tests/rewrites/: material-nav-item-1.yml  material-nav-item-2.yml  material-nav-item-3.yml  material-nav-item-4.yml  material-tabs-item-1.yml  material-tabs-item-2.yml  mkdocs-sitemap-1.yml  readthedocs-base-1.yml
