[tool.poetry]
name = "mkdocs-section-index"
version = "0.2.3"
description = "MkDocs plugin to allow clickable sections that lead to an index page"
authors = ["Oleh Prypin <oleh@pryp.in>"]
license = "MIT"
repository = "https://github.com/oprypin/mkdocs-section-index"
keywords = ["mkdocs", "mkdocs-plugin"]
readme = "README.md"

[tool.poetry.plugins."mkdocs.plugins"]
section-index = "mkdocs_section_index.plugin:SectionIndexPlugin"

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.0"
dataclasses = {version = "^0.7", python = "<3.7"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-golden = "^0.1.0"
testfixtures = "^6.15.0"
MechanicalSoup = "^0.12.0"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
pytype = {version = "^2020.10.8", markers = "python_version>='3.6' and python_version<'3.9' and sys_platform!='win32'"}  # Skip on Windows
mkdocs-material = "^6.1.5"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:mkdocs_section_index.*:"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
