[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-section-index"
description = "MkDocs plugin to allow clickable sections that lead to an index page"
readme = "README.md"
license = "MIT"
keywords = ["mkdocs", "mkdocs-plugin"]
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "mkdocs >=1.0.3",
]

[project.urls]
Documentation = "https://oprypin.github.io/mkdocs-section-index/"
Source = "https://github.com/oprypin/mkdocs-section-index"
Issues = "https://github.com/oprypin/mkdocs-section-index/issues"
History = "https://github.com/oprypin/mkdocs-section-index/releases"

[project.entry-points."mkdocs.plugins"]
section-index = "mkdocs_section_index.plugin:SectionIndexPlugin"

[tool.hatch.version]
path = "mkdocs_section_index/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/mkdocs_section_index", "/tests"]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:format",
    "hatch run types:check",
    "hatch run test:test",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-golden",
    "testfixtures >=6.15.0",
    "MechanicalSoup >=0.12.0",
    "mkdocs-material >=6.1.5",
]
[tool.hatch.envs.test.scripts]
test = [
    "pytest -q",
    "mkdocs build -f example/mkdocs.yml --strict",
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
]
[tool.hatch.envs.types.scripts]
check = [
    "mypy mkdocs_section_index"
]

[tool.hatch.envs.style]
skip-install = true
dependencies = [
    "pyupgrade",
    "autoflake",
    "isort",
    "black",
]
[tool.hatch.envs.style.scripts]
format = [
    "find mkdocs_section_index tests -name '*.py' | xargs pyupgrade --exit-zero-even-if-changed --py37-plus",
    "autoflake -r mkdocs_section_index tests",
    "isort -q mkdocs_section_index tests",
    "black -q mkdocs_section_index tests",
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs >=1.1.2",
    "mkdocs-material >=7.3.6",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
expand-star-imports = true

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:mkdocs_section_index.*:"]
testpaths = ["tests"]
